[tool.poetry]
name = "diSmite"
version = "0.1.0"
description = "Discord bot which provide information about Smite players and matches"
authors = ["Maria Karaseva <maria-karasevaa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.2.2"
pyrez = "^1.1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
